Slightly refactor the HTTP interface.

--- a/templates/user-config.html
+++ b/templates/user-config.html
@@ -50,7 +50,7 @@
                     </form>
                 </div>
                 <div class="form-wrapper">
-                    <form method="POST" action="/user/cfg" data-xhrable>
+                    <form method="POST" action="" data-xhrable>
                         <label>Old password</label>
                         <input name="password-old" type="password" placeholder="Required to change anything." />
                         <label>Username</label>
