--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,7 +2,7 @@
     <a href="/" class="brand">webmcast</a>
     <span class="spacer"></span>
 {{- if .User }}
-    <span>Hi, <a href="/user/cfg">{{.User.Login}}</a>.</span>
+    <span>Hi, <a href="/user/">{{.User.Login}}</a>.</span>
     <a href="/user/logout">Log out</a>
 {{- else }}
     <a href="/user/login">Log in</a>
