--- a/templates/landing.html
+++ b/templates/landing.html
@@ -56,7 +56,7 @@
                        at the same time.</p>
                 </div>
             </section>
-            <section class="center-block" style="text-align:center">
+            <section class="center-block" style="text-align:center;font-size:1.2em">
             {{- if .User }}
                 <h2>Oh, look, you've already signed up.</h2>
                 <p>Sorry, the streaming guide is not ready yet. Figure it out yourself.</p>
