Tweak the design some more.
And remove the bullshit.

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="center-block">
+<footer>
     webmcast // <a href="https://github.com/pyos/webmcast">source code</a>
     {{/* todo: tos, privacy policy, ... */}}
 </footer>
