--- a/static/css/global.css
+++ b/static/css/global.css
@@ -13,10 +13,13 @@ html, body {
 
 body {
     font: normal 14px/1.5 sans-serif;
-    color: #444;
+    color: #222;
     margin: 0;
-    display: flex;
-    background: #fff;
+}
+
+body > [data-scrollbar]:only-child {
+    /* this is easier than dealing with `overflow:scroll` on `body`. */
+    height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -32,35 +35,13 @@ a:link:not(:hover), a:visited:not(:hover) {
 }
 
 img, svg, video, audio, canvas {
-    vertical-align: middle;  /* https://github.com/h5bp/html5-boilerplate/issues/440 */
-}
-
-#content {
-    flex: 1;
-}
-
-.center-block {
-    max-width: 52.5rem;
-    margin-left: auto;
-    margin-right: auto;
-    box-sizing: border-box;
-}
-
-.center-block-small {
-    max-width: 26.25rem;
-}
-
-.warning-block {
-    border: 1px solid #ffc;
-    background: repeating-linear-gradient(-60deg, #ffc, #ffc 100px, #ffd 100px, #ffd 200px) #ffc;
-}
-
-.warning-block > .center-block {
-    padding: 2rem;
+    /* do not reserve space for descenders */
+    vertical-align: middle;
 }
 
 [data-scrollbar] {
     position: relative;
+    overflow-x: hidden;
     overflow-y: auto;
 }
 
@@ -98,6 +79,33 @@ img, svg, video, audio, canvas {
 
 [data-tabs] > .tabbar > .active {
     border-bottom-width: 4px;
+}
+
+[data-status]:before {
+    font: normal 4em FontAwesome;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 1em;
+    height: 1em;
+    margin-top: -0.5em;  /* alternatively, `top: calc(50% - 0.5em);`... */
+    margin-left: -0.5em;
+    z-index: 2;
+}
+
+[data-status="loading"]:before {
+    animation: spin 0.66s infinite linear;
+    border: 0.1em solid rgba(255,255,255,0.2);
+    border-radius: 50%;
+    border-top-color: currentColor;
+    box-sizing: border-box;
+    content: '';
+}
+
+@keyframes spin {
+    0%   {transform: rotate(0deg);}
+    100% {transform: rotate(359deg);}
 }
 
 [data-markup] + [data-markup] {
@@ -280,18 +288,15 @@ a.text-button:active {
 }
 
 a.button {
-    width: 1.5em;
-    padding: 0.5em;
+    font: normal 1.66em/1 FontAwesome;
+    width: 1em;
+    height: 1em;
+    padding: 0.33em;
     color: inherit;
-    display: inline-block;
     text-align: center;
+    display: inline-block;
     vertical-align: middle;
     transition: text-shadow 0.1s ease-in-out;
-}
-
-a.button:before {
-    font: normal 1.4em FontAwesome;  /* 1.5em is 0.33px more than width for some reason */
-    vertical-align: middle;
 }
 
 a.button:hover,
@@ -326,8 +331,15 @@ nav > a.text-button {
     margin-bottom: -0.5em;
 }
 
+nav, section, footer {
+    max-width: 70rem;
+    margin-left: auto;
+    margin-right: auto;
+    box-sizing: border-box;
+}
+
 footer {
-    padding: 2em;
+    padding: 1em 2em;
     color: #777;
 }
 
@@ -349,7 +361,7 @@ footer {
     background: #fff;
 }
 
-.modal > * {
+.modal > [data-scrollbar] {
     max-height: 100vh;
 }
 
@@ -374,10 +386,9 @@ footer {
 }
 
 .user-header {
-    display: flex;
-    flex-shrink: 0;
-    align-items: center;
     padding: 2em;
+    display: flex;
+    align-items: center;
 }
 
 .user-header h1 {
@@ -391,14 +402,11 @@ footer {
 .user-header h2 {
     display: inline-block;
     margin: 0;
-    font-size: 1.2em;
+    font-size: 1.2em;  /* (h1.font-size + h2.font-size) * line-height = 4.2em ~= 58.8px */
 }
 
-.user-header .avatar {
+.user-header > img {
     flex-shrink: 0;
-    margin-right: 1em;
-    width: 60px;
-    height: 60px;  /* ~= 58.8px = 4.2em = (h1.font-size + h2.font-size) * line-height */
 }
 
 .user-header > :nth-child(2) {
@@ -407,57 +415,42 @@ footer {
     overflow: hidden;
 }
 
+.user-header > :nth-child(2),
 .user-header > :nth-child(3) h2 {
     margin-left: 1em;
 }
 
-[data-status]:before {
-    font: normal 4em FontAwesome;
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 1em;
-    height: 1em;
-    margin-top: -0.5em;  /* alternatively, `top: calc(50% - 0.5em);`... */
-    margin-left: -0.5em;
-    z-index: 2;
-}
-
-[data-status="loading"]:before {
-    animation: spin 0.66s infinite linear;
-    border: 0.1em solid rgba(255,255,255,0.2);
-    border-radius: 50%;
-    border-top-color: currentColor;
-    box-sizing: border-box;
-    content: '';
-}
-
-@keyframes spin {
-    0%   {transform: rotate(0deg);}
-    100% {transform: rotate(359deg);}
+.warning-block {
+    padding: 2rem;
+    border: 1px solid #ffc;
+    background: repeating-linear-gradient(-60deg, #ffc, #ffc 100px, #ffd 100px, #ffd 200px) #ffc;
 }
 
 .form-wrapper {
     padding: 2em;
 }
 
+body > * > .form-wrapper {
+    max-width: 20rem;
+    padding: 0 2em;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .form-wrapper > form > * {
     display: block;
 }
 
-.form-wrapper > :not(label) + *,
-.form-wrapper > form > :not(label) + * {
+.form-wrapper :not(label) + * {
     margin-top: 1em;
 }
 
 .form-wrapper label {
     font-weight: bold;
-    margin-bottom: 0;
 }
 
 .form-wrapper .notice {
-    color: #888;
+    color: #666;
 }
 
 .form-wrapper textarea,
