--- a/static/css/room.css
+++ b/static/css/room.css
@@ -1,18 +1,21 @@
-@media (min-width: 70rem) {
-    .center-block {
-        max-width: 70rem;
-    }
+body.aside-chat nav,
+body.aside-chat section:not(.player-block),
+body.aside-chat footer {
+    max-width: 52.5rem;
+}
+
+.bg {
+    background: #111;
+    color: #fff;
 }
 
 .player-block {
     display: flex;
+    max-width: none;
     justify-content: center;
-    background: #1a1a1a;
-    color: #fff;
 }
 
 .player {
-    max-width: 55rem;
     overflow: hidden;
     position: relative;
     background: #000;
@@ -25,6 +28,10 @@
     height: auto;
     max-width: 100%;
     max-height: calc(100vh - 3.8em);  /* - total height of nav */
+}
+
+.player.has-video {
+    max-width: 62rem;
 }
 
 .player.has-video svg,
@@ -52,6 +59,13 @@
     max-height: none;
 }
 
+.player:not([data-status="playing"]) {
+    background-image:
+        repeating-linear-gradient(90deg,transparent,transparent 49px,#111 49px,#111 50px),
+        repeating-linear-gradient(180deg,#000,#000 49px,#111 49px,#111 50px);
+    background-position: 50% 50%;
+}
+
 .player[data-status="error"]:before {
     content: '\f071';  /* exclamation-triangle */
 }
@@ -63,8 +77,12 @@
     right: 0;
     bottom: 0;
     padding: 0 0.5em;
+    align-items: center;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.player.has-video[data-status="playing"] .controls {
     background: rgba(0,0,0,0.7);
-    transition: transform 0.3s ease-out, opacity 0.3s ease-in-out;
 }
 
 .player.has-video[data-status="playing"].hide-controls {
@@ -73,17 +91,19 @@
 
 .player.has-video[data-status="playing"].hide-controls .controls:not(:hover) {
     opacity: 0;
-    transform: translateY(100%);
 }
 
 .player .controls > :not(.button) {
-    margin: 0.5em;  /* = padding-left = padding-right of `.player .controls` */
     white-space: nowrap;
 }
 
 .player .status {
     flex: 1;
+    padding: 0.5em 1em;
+    font-size: 1.1em;
+    overflow: hidden;
     font-weight: bold;
+    text-overflow: ellipsis;
     text-transform: uppercase;
 }
 
@@ -95,8 +115,8 @@
 .player .volume:before {
     content: ' ';
     display: block;
-    border-top: 1.5em /* = line-height */ solid transparent;
-    border-right: 6em solid rgba(255,255,255,0.3);
+    border-top: 1.66em /* = line-height */ solid transparent;
+    border-right: 7em solid rgba(255,255,255,0.3);
 }
 
 .player .volume .slider {
@@ -111,16 +131,16 @@
 .player:not(.has-video) {
     width: 100%;
     height: 2.5em;
-    background: none;
-}
-
-.player:not(.has-video) .controls {
-    padding: 0 3em;
+    overflow: visible;
     background: none;
 }
 
 .player:not(.has-video):before {
-    left: 100%;
+    left: 1em;
+}
+
+.player:not(.has-video) .controls {
+    padding-left: 6em;
 }
 
 .player .mute:before {
@@ -183,6 +203,20 @@
     padding: 0 2em;
 }
 
+@media (max-width: 30em) {
+    .player:not(.has-video):before {
+        left: 0;
+    }
+
+    .player:not(.has-video) .controls {
+        padding-left: 2em;
+    }
+
+    .stream-about {
+        padding: 0;
+    }
+}
+
 @media (max-width: 50em) {
     .stream-about {
         column-count: 1;
@@ -234,31 +268,29 @@
 }
 
 .chat {
-    width: 15%;
-    min-width: 15rem;
+    width: 17.5rem;
     display: flex;
     flex: 0 0 auto;
     flex-direction: column;
     overflow: hidden;
-    background: inherit;
     transition: transform 0.4s ease-in-out;
 }
 
-body.no-video {
-    margin-right: 15rem;
+body.aside-chat {
+    margin-right: 17.5rem;
 }
 
-body.no-video .chat {
+body.aside-chat .chat {
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
-    width: 15rem;
     z-index: 128;
+    background: #0a0a0a;
 }
 
 @media (max-width: 50em) {
-    body.no-video {
+    body.aside-chat {
         margin-right: 0;
     }
 
@@ -268,12 +300,14 @@ body.no-video .chat {
         left: 100%;
         bottom: 0;
         z-index: 128;
+        background: #0a0a0a;
     }
 
     .chat-tab {
         position: fixed;
         right: 0;
         bottom: 0;
+        z-index: 127;
         border-top: 2em solid transparent;
         border-right: 2em solid #000;
         transition: opacity 0.4s ease-in-out;
@@ -300,7 +334,7 @@ body.no-video .chat {
 .chat .log {
     flex: 1 1 0;
     margin: 0;
-    padding: 1em 1em 0 1em;
+    padding: 1em;
     display: flex;
     list-style: none;
     word-wrap: break-word;
@@ -354,19 +388,28 @@ body.no-video .chat {
 
 .chat form {
     position: relative;
-    padding: 1em;
-}
-
-.chat form > :not(:first-child) {
-    margin-top: 1em;
+    text-align: right;
+    padding: 0 1em;
 }
 
 .chat .input {
     width: 100%;
 }
 
-.chat .ins-emoji:before {
+.chat .button:before {
+    font-size: 0.9em;
+}
+
+.chat .button.join:before {
+    content: '\f090';  /* sign-in */
+}
+
+.chat .button.ins-emoji:before {
     content: '\f118';  /* smile-o */
+}
+
+.chat .button.send:before {
+    content: '\f1d8';  /* paper-plane = send */
 }
 
 .player[data-status="playing"] svg,
