--- a/templates/user-restore.html
+++ b/templates/user-restore.html
@@ -7,12 +7,10 @@
         <title>webmcast // password reset</title>
     </head>
     <body>
-        <article id="content" data-scrollbar>
+        <div data-scrollbar>
             {{ template "nav.html" }}
-            <section class="center-block center-block-small">
-                {{ template "form-user-restore.html" }}
-            </section>
+            {{ template "form-user-restore.html" }}
             {{ template "footer.html" }}
-        </article>
+        </div>
     </body>
 </html>
